--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <div id='left'>
+      <div class='key'>x</div>
     </div>
     <div id='right'>
+      <div class='resource'>y</div>
     </div>
   </body>
 </html>
