--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <div id='left'>
-      <div class='key'>x</div>
+      <textarea id='add-k' class='key'>+</div>
     </div>
     <div id='right'>
-      <div class='resource'>y</div>
+      <textarea id='add-r' class='resource'>+</div>
     </div>
   </body>
 </html>
